--- a/src/authentication/authentication.css
+++ b/src/authentication/authentication.css
@@ -39,13 +39,15 @@ body {
 /* login and registration section and container styles */
 
 .login-section,
-.registration-section {
+.registration-section,
+.forgotPassword-section {
   align-items: center;
   height: calc(100vh - 85px);
 }
 
 .login-container,
-.registration-container {
+.registration-container,
+.forgotPassword-container {
   border-radius: 5px;
   min-height: 500px;
   box-shadow: 0 0 5px 0 rgba(255, 255, 255, 0.4);
@@ -58,7 +60,8 @@ body {
 }
 
 .login-container .login-header,
-.registration-container .registration-header {
+.registration-container .registration-header,
+.forgotPassword-container .forgotPassword-header {
   font-size: 36px;
   font-weight: 400;
   margin-top: 45px;
@@ -66,7 +69,8 @@ body {
 }
 
 .login-container input,
-.registration-container input {
+.registration-container input,
+.forgotPassword-container input {
   width: 300px;
   height: 35px;
   margin: 20px 45px;
@@ -78,7 +82,8 @@ body {
 }
 
 .login-container input:focus-visible,
-.registration-container input:focus-visible {
+.registration-container input:focus-visible,
+.forgotPassword-container input:focus-visible {
   outline: none;
 }
 
