--- a/index.css
+++ b/index.css
@@ -184,6 +184,47 @@ body {
   font-size: 18px;
 }
 
+.footer {
+  padding: 40px 0;
+  
+  
+}  
+
+
+
+.footer ul {
+  margin-top: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+  text-align: center;
+
+}
+
+.footer ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+.footer ul li {
+  display: inline-block;
+  padding: 0 15px;
+}
+
+.footer ul li a:hover {
+  opacity: 1;
+}
+
+.footer .copyright {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 13;
+  color: #aaa;
+}
+
 
 /* responsive css for home page */
 @media only screen and (max-device-width: 480px){
@@ -209,5 +250,7 @@ body {
 
   body {
     overflow-x: hidden;
-}
+  }
+
+  
 }
