--- a/src/ContactUs/contactUs.css
+++ b/src/ContactUs/contactUs.css
@@ -109,6 +109,49 @@ body {
   overflow-y: scroll;
 }
 
+.footer {
+  padding: 40px 0;
+  color: #000;
+  
+}  
+
+
+
+.footer ul {
+  margin-top: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+  text-align: center;
+
+}
+
+.footer ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+.footer ul li {
+  display: inline-block;
+  padding: 0 15px;
+}
+
+.footer ul li a:hover {
+  opacity: 1;
+}
+
+.footer .copyright {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 13;
+  color: #aaa;
+}
+
+
+
 
 /* media query for contact us page for device width less than 480px  */
 @media only screen and (max-device-width: 480px){
