--- a/src/Visitor/visitor.css
+++ b/src/Visitor/visitor.css
@@ -1,7 +1,7 @@
 /*  
-Thirumurthy,Sujitraj , UTA ID : 1001830297 
-Selvaraj, Nikil Nandha, UTA ID : 1002004184
-Mandava, Sai Venkat, UTA: 1001955604
+Aravind Ashok Kumar 1001944888
+Neeharika Kosana 1001960736
+Vignesh Manikandan 1002012757
 */
 
 /* FONT USED : Roboto Sans Serif , Oswald Sans Serif ,Damion cursive */
