--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ Vignesh Manikandan 1002012757
 body {
   /* use the font */
   font-family: "Roboto", sans-serif;
-  background-color: var(--primary-bg);
+  background-color: #1FA9D2;
   color: var(--primary-label);
   margin: 0;
   background-attachment: fixed;
