--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ Vignesh Manikandan 1002012757
 #tray {
   height:40px;
   width:40px;
-  background-color:blue;
+  background-color:rgb(0, 140, 255);
   display:block;
   border-radius:50%;
   text-align:center;
@@ -58,7 +58,7 @@ Vignesh Manikandan 1002012757
   width: 22px;
   height: 22px;
   padding: 2px;
-  color: #fff;
+  color: rgb(20, 19, 19);
   font-weight: 300;
   display:none;
   }
@@ -92,7 +92,7 @@ body {
   padding-left: 25px;
   border-radius: 7px;
   min-height: 300px;
-  box-shadow: 0 0 5px 0 rgba(156, 156, 156, 0.2);
+  box-shadow: 0 0 5px 0 rgba(9, 8, 8, 0.2);
   position: relative;
   left: 2.5%;
   background: inherit;
@@ -110,7 +110,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  box-shadow: inset 0 0 2000px rgba(124, 124, 124, 0.5);
+  box-shadow: inset 0 0 2000px rgba(4, 4, 4, 0.5);
   filter: blur(10px);
   z-index: -1;
 }
@@ -145,7 +145,7 @@ body {
 }
 
 .services-link:hover {
-  color: var(--color-light) !important;
+  color: var(--primary-label-1) !important;
   text-decoration: underline;
 }
 
@@ -175,7 +175,7 @@ body {
   height: 3px;
   width: 25px;
   margin: 2px 1px;
-  background-color: #bbb;
+  background-color: rgb(12, 12, 12);
   display: inline-block;
   transition: background-color 0.6s ease;
 }
@@ -192,7 +192,7 @@ body {
   margin: 10px 0px;
 }
 
-/* carousel customer review section styles */
+/* carousel join a club styles */
 
 .review-content div:first-child {
   font-size: 30px;
@@ -212,8 +212,8 @@ body {
 }
 
 .customer-review span img {
-  height: 25px;
-  width: 70px;
+  height: 100px;
+  width: 100px;
 }
 
 /* carousel price listing section styles */
@@ -259,7 +259,7 @@ body {
   margin-top: 15px;
   text-align: center;
   font-size: 13;
-  color: #aaa;
+  color: rgb(6, 6, 6);
 }
 
 
