--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ Vignesh Manikandan 1002012757
 body {
   /* use the font */
   font-family: "Roboto", sans-serif;
-  background-color: #1FA9D2;
+  background-color: #0d0e0e;
   color: var(--primary-label);
   margin: 0;
   background-attachment: fixed;
@@ -259,7 +259,7 @@ body {
   margin-top: 15px;
   text-align: center;
   font-size: 13;
-  color: rgb(6, 6, 6);
+  color: rgb(111, 106, 106);
 }
 
 
