--- a/src/Payment/payment.css
+++ b/src/Payment/payment.css
@@ -67,8 +67,8 @@ body {
   }
   
   .container {
-    background-color: #f2f2f2;
-    color: black;
+    background-color: aliceblue;
+    color: #757575;
     padding: 5px 20px 15px 20px;
     border: 1px solid lightgrey;
     border-radius: 3px;
@@ -94,21 +94,157 @@ body {
   }
   
   .btn {
-    background-color: #04AA6D;
+    background-color: deepskyblue;
     color: white;
     padding: 12px;
-    margin: 10px 0;
+    margin: auto;
     border: none;
-    width: 100%;
+    width: 50%;
     border-radius: 3px;
     cursor: pointer;
     font-size: 17px;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    align-items: center;
   }
   
   .btn:hover {
-    background-color: #45a049;
+    background-color: #106fdb;
   }
   
+  .Cart{
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(to bottom right, #E3F0FF, #FAFCFF);
+    height: 72vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
+
+  .Cart-Container{
+    width: 90%;
+    height: 95%;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 25px 40px #1687d933;
+   }
+
+   .Header{
+    margin: auto;
+    width: 90%;
+    height: 15%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   }
+   .Heading{
+    font-size: 20px;
+    font-family: ‘Open Sans’;
+    font-weight: 700;
+    color: #2F3841;
+   }
+   .Action{
+    font-size: 14px;
+    font-family: ‘Open Sans’;
+    font-weight: 600;
+    color: #E44C4C;
+    cursor: pointer;
+    border-bottom: 1px solid #E44C4C;
+   }
+   .Cart-Items{
+    margin: auto;
+    width: 90%;
+    height: 30%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   }
+   .image-box{
+    width: 15%;
+    text-align: center;
+   }
+   .about{
+    height: 100%;
+   }
+   .title{
+    padding-top: 5px;
+    line-height: 10px;
+    font-size: 32px;
+    font-family: ‘Open Sans’;
+    font-weight: 800;
+    color: #202020;
+   }
+   .subtitle{
+    line-height: 10px;
+    font-size: 18px;
+    font-family: ‘Open Sans’;
+    font-weight: 600;
+    color: #909090;
+   }
+   .prices{
+    height: 100%;
+    text-align: right;
+   }
+   .amount{
+    padding-top: 20px;
+    font-size: 26px;
+    font-family: ‘Open Sans’;
+    font-weight: 800;
+    color: #202020;
+   }
+   .save{
+    padding-top: 5px;
+    font-size: 14px;
+    font-family: ‘Open Sans’;
+    font-weight: 600;
+    color: #1687d9;
+    cursor: pointer;
+   }
+   .remove{
+    padding-top: 5px;
+    font-size: 14px;
+    font-family: ‘Open Sans’;
+    font-weight: 600;
+    color: #E44C4C;
+    cursor: pointer;
+   }
+   hr{
+    width: 66%;
+    float: right;
+    margin-right: 5%;
+   }
+   .checkout{
+    float: right;
+    margin-right: 5%;
+    width: 28%;
+   }
+   .total{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+   }
+   .Subtotal{
+    font-size: 22px;
+    font-family: ‘Open Sans’;
+    font-weight: 700;
+    color: #202020;
+   }
+   .items{
+    font-size: 16px;
+    font-family: ‘Open Sans’;
+    font-weight: 500;
+    color: #909090;
+    line-height: 10px;
+   }
+   .total-amount{
+    font-size: 36px;
+    font-family: ‘Open Sans’;
+    font-weight: 900;
+    color: #202020;
+   }
   a {
     color: #2196F3;
   }
@@ -131,18 +267,11 @@ body {
       margin-bottom: 20px;
     }
   }
-/*.container {
-    display: grid;
-    /* grid-template-columns: auto; 
-  
-    background-color: var(--primary-bg-1);
-    width: auto;
-  }*/
   .heading {
     display: inline-grid;
     text-align: center;
     padding: 30px;
-    color: var(--primary-label-1);
+    color: black;
     font-size: 30px !important;
     font-weight: 300;
     letter-spacing: 1px;
