Contact us and other minor changes

--- a/src/Payment/payment.css
+++ b/src/Payment/payment.css
@@ -167,38 +167,38 @@ body {
     text-align: center;
    }
    .about{
-    height: 100%;
+    height: 50%;
    }
    .title{
     padding-top: 5px;
-    line-height: 10px;
-    font-size: 32px;
-    font-family: ‘Open Sans’;
+    line-height: 5px;
+    font-size: 20px;
+    font-family: 'Open Sans';
     font-weight: 800;
     color: #202020;
    }
    .subtitle{
-    line-height: 10px;
-    font-size: 18px;
-    font-family: ‘Open Sans’;
+    line-height: 5px;
+    font-size: 12px;
+    font-family: 'Open Sans';
     font-weight: 600;
     color: #909090;
    }
    .prices{
-    height: 100%;
+    height: 50%;
     text-align: right;
    }
    .amount{
-    padding-top: 20px;
-    font-size: 26px;
-    font-family: ‘Open Sans’;
+    padding-top: 10px;
+    font-size: 16px;
+    font-family: 'Open Sans';
     font-weight: 800;
     color: #202020;
    }
    .save{
     padding-top: 5px;
     font-size: 14px;
-    font-family: ‘Open Sans’;
+    font-family: 'Open Sans';
     font-weight: 600;
     color: #1687d9;
     cursor: pointer;
@@ -206,7 +206,7 @@ body {
    .remove{
     padding-top: 5px;
     font-size: 14px;
-    font-family: ‘Open Sans’;
+    font-family: 'Open Sans';
     font-weight: 600;
     color: #E44C4C;
     cursor: pointer;
@@ -227,21 +227,21 @@ body {
     justify-content: space-between;
    }
    .Subtotal{
-    font-size: 22px;
-    font-family: ‘Open Sans’;
+    font-size: 16px;
+    font-family: 'Open Sans';
     font-weight: 700;
     color: #202020;
    }
    .items{
-    font-size: 16px;
-    font-family: ‘Open Sans’;
+    font-size: 10px;
+    font-family: 'Open Sans';
     font-weight: 500;
     color: #909090;
     line-height: 10px;
    }
    .total-amount{
-    font-size: 36px;
-    font-family: ‘Open Sans’;
+    font-size: 18px;
+    font-family: 'Open Sans';
     font-weight: 900;
     color: #202020;
    }
